# vulcan-luaskills

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.zh-CN.md  deny.toml
.github/workflows/: build-lua-deps.yml
docs/: FFI_BETA_RELEASE_NOTES.md  FFI_HOST_CHECKLIST.md  FFI_INTEGRATION_GUIDE.md  FFI_REFACTOR_DRAFT.md  HOST_DATABASE_PROVIDER_GUIDE.md  SKILL_CONFIG_SYSTEM_DESIGN.md  SKILL_DEVELOPER_MANUAL.md  SKILL_ROOT_LAYER_POLICY.md  index.md  lua-runtime-release-notes.md  skill-development.md  upgrade-0.4.5.md  upgrade-0.4.6.md  upgrade-from-0.2-to-0.3.md
docs/architecture/: runtime-model.md
docs/completed/20260422/: 01-VLDB_CONTROLLER_INTEGRATION_FIX.md  02-CONTROLLER_BRIDGE_DEEP_FIX.md  03-FFI_ENGINE_AND_VM_CONTEXT_DEEP_FIX.md  04-VM_SCOPE_AND_DATABASE_CALLBACK_FIX.md
docs/completed/20260423/: 01-SKILL_DEVELOPER_MANUAL.md  02-HOST_SKILL_IGNORE_LIST.md  03-RUNLUA_VM_POOL.md  04-REMOVE_LUAEXEC_PROGRAM.md
docs/completed/20260424/: 01-SKILL_CONFIG_SYSTEM_DESIGN.md  02-SKILL_CONFIG_SYSTEM_IMPLEMENTATION.md  03-CONTROLLER_BINDING_ID_SEMANTICS_FIX.md
docs/completed/20260425/: 01-INTEGRATE_LUA_DEPS_WORKFLOW.md  02-RUNTIME_DEMO_PACKAGE_WORKFLOW.md
docs/de/: index.md
docs/de/product/: why-luaskills.md
docs/es/: index.md
docs/es/product/: why-luaskills.md
docs/ffi/: overview.md
docs/fr/: index.md
docs/fr/product/: why-luaskills.md
docs/ja/: index.md
docs/ja/product/: why-luaskills.md
docs/ko/: index.md
docs/ko/product/: why-luaskills.md
docs/plan/: 20260422-05-FFI_ABI_REFACTOR.md
docs/product/: why-luaskills.md
docs/providers/: database-providers.md
docs/pt-BR/: index.md
docs/pt-BR/product/: why-luaskills.md
docs/zh-CN/: index.md  skill-development.md  upgrade-from-0.2-to-0.3.md
docs/zh-CN/architecture/: host-tooling-result-bridge-design.md  skill-config-system-design.md  skill-source-policy-and-hub.md
docs/zh-CN/archive/: ffi-refactor-draft.md
docs/zh-CN/ffi/: beta-release-notes.md  host-checklist.md  integration-guide.md
docs/zh-CN/product/: why-luaskills.md
docs/zh-CN/providers/: host-database-provider-guide.md
examples/demo-ffi/: README.md  run.ps1  run.sh
examples/demo-rust/: Cargo.toml  README.md  run.ps1  run.sh
examples/demo-rust/src/: main.rs
examples/ffi/c/: README.md  demo.c
examples/ffi/demo_runtime/: README.md  run_python_install_demo.py
examples/ffi/go/: demo.go
examples/ffi/host_provider_demo/: README.md  run_python_host_provider_demo.py
examples/managed_runtime/: README.md
include/: luaskills_ffi.h  luaskills_json_ffi.h  vulcan_luaskills_ffi.h  vulcan_luaskills_json_ffi.h
luaskills-debug-skill/: SKILL.md
luaskills-debug-skill/agents/: openai.yaml
luaskills-debug-skill/scripts/: run_debug.py
scripts/: fetch_runtime_deps.ps1  fetch_runtime_deps.sh  fetch_runtime_packages_bundle.py  generate_dependency_license_certificate.ps1  generate_runtime_packages_metadata.py  install_lua_deps.ps1  install_lua_deps.sh  lua_packages.txt  lua_runtime_release_notes.md  package_debug_tool.ps1  package_debug_tool.sh  package_demo.ps1  package_demo.sh  package_ffi_sdk.ps1  package_ffi_sdk.sh  package_lua_runtime.ps1  package_lua_runtime.sh  package_source_deps.ps1  package_source_deps.sh  runtime_packages_binding.json
scripts/debug-tools/: managed_runtime_layout_check.py  managed_runtime_smoke.ps1  managed_runtime_smoke.sh  setup_debug_runtime.ps1  setup_debug_runtime.sh
scripts/ffi/: fetch_ffi.ps1  fetch_ffi.sh
sdk/go/: README.md  client.go  config.go  ffi.go  ffi_stub.go  go.mod  management.go  provider.go  roots.go  runtime_assets.go  types.go
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: basic.py  provider_callback.py
sdk/python/src/luaskills/: __init__.py  cli.py  client.py  ffi.py  roots.py  runtime_assets.py  types.py
sdk/python/src/luaskills/examples/: __init__.py  basic.py  provider_callback.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
skills/skill-search/: skill.yaml
src/: entry_descriptor.rs  ffi.rs  ffi_standard.rs  lancedb_host.rs  lib.rs  lua_engine.rs  lua_skill.rs  runtime_context.rs  runtime_help.rs  runtime_options.rs  sqlite_host.rs
src/dependency/: manager.rs  mod.rs  platform.rs  types.rs
src/download/: archive.rs  github.rs  manager.rs  mod.rs  skilllist.rs  url.rs
src/ffi/: requests.rs  tests.rs
src/ffi_standard/: tests.rs  types.rs
src/host/: callbacks.rs  controller.rs  database.rs  mod.rs  options.rs
src/providers/: lancedb.rs  mod.rs  sqlite.rs
src/runtime/: cache.rs  config.rs  context.rs  encoding.rs  engine.rs  entry.rs  help.rs  logging.rs  managed_io.rs  managed_runtime.rs  mod.rs  process_session.rs  result.rs
src/skill/: dependencies.rs  manager.rs  manifest.rs  mod.rs  resolver.rs  source.rs
(+65 files in other folders)
