[package]
name = "vulcan-luaskills"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22"
flate2 = "1"
libloading = "0.8"
mlua = { git = "https://github.com/mlua-rs/mlua", features = ["luajit52", "vendored", "serialize", "send"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
vldb-controller-client = { git = "https://github.com/OpenVulcan/vldb-controller.git", rev = "255683d0f2fc9116051afb3730c4e0319ad1d786", package = "vldb-controller-client" }
zip = { version = "2", default-features = false, features = ["deflate"] }
