[package]
name = "luaskills"
version = "0.2.1"
edition = "2024"
rust-version = "1.94"
license = "MIT"
description = "LuaSkills core runtime library for loading, invoking, and managing Lua skill packages."
repository = "https://github.com/LuaSkills/luaskills"
homepage = "https://github.com/LuaSkills/luaskills"
documentation = "https://docs.rs/luaskills"
readme = "README.md"
keywords = ["lua", "skills", "runtime", "ffi", "luajit"]
categories = ["api-bindings", "development-tools::ffi"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/deny.toml",
    "/include/**",
    "/src/**",
]

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22"
flate2 = "1"
libloading = "0.8"
mlua = { version = "0.12.0-rc.1", features = ["luajit52", "vendored", "serialize", "send"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread"] }
vldb-controller-client = "0.2.1"
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
